--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -142,9 +142,8 @@ body {
 	color: black;
 	background-color: white;
 	border: 1px solid rgb(255, 0, 131);
-    border-radius: 5px;
+	border-radius: 5px;
 }
-
 
 .theme-nav-items {
 	margin-top: 70px;
@@ -249,6 +248,7 @@ body {
 					color: rgba(theme-color('site-nav-link'), 1);
 				}
 			}
+			
 		}
 	}
 }
@@ -312,38 +312,110 @@ body {
 		}
 	}
 }
-.detailbtn{
+.detailbtn {
 	border-color: rgb(255, 0, 131);
 	background-color: white;
 	color: rgb(255, 0, 131);
 }
-.detailbtn:hover{
+.detailbtn:hover {
 	border-color: rgb(255, 0, 131);
 	background-color: #ff00830f;
 	color: rgb(255, 0, 131);
 }
-.senior::before{
+.senior::before {
 	background-color: #00d395;
-    border-radius: 50%;
-    content: '';
-    height: 8px;
-    left: 0;
+	border-radius: 50%;
+	content: '';
+	height: 8px;
+	left: 0;
 	margin: 1rem;
-    position: absolute;
-    top: 4px;
-    width: 8px;
+	position: absolute;
+	top: 4px;
+	width: 8px;
 }
-.junior::before{
+.junior::before {
 	background-color: #a26ee3;
-    border-radius: 50%;
-    content: '';
+	border-radius: 50%;
+	content: '';
 	margin: 1rem;
-    height: 8px;
-    left: 0;
-    position: absolute;
-    top: 4px;
-    width: 8px;
+	height: 8px;
+	left: 0;
+	position: absolute;
+	top: 4px;
+	width: 8px;
 }
-.pink-border{
-	border: 1px solid rgb(255, 0, 131) !important
+.pink-border {
+	border: 1px solid rgb(255, 0, 131) !important;
+}
+.percentage {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
+	.percentage-item {
+		font-size: 12px;
+		margin: 0 5px;
+		cursor: pointer;
+		padding: 5px 16px;
+		border-radius: 25px;
+		font-weight: bold;
+		border: 1px solid rgba(theme-color('site-nav-link'), 0.3);
+		&:hover {
+			border: 1px solid rgba(theme-color('site-primary'), 1);
+			background-color: theme-color('site-primary');
+			color: #f2f2f2;
+		}
+	}
+	&.smaller {
+		.percentage-item {
+			font-size: 10px !important;
+			margin: 0 2.5px !important;
+			padding: 4px 12px !important;
+		}
+	}
+}
+.larger {
+	font-size: 18px;
+	font-weight: 500;
+	text-shadow: 0 0 3px rgba(113, 121, 128, 0.6);
+}
+.pool-card-tabs {
+	display: flex;
+	align-items: center;
+	padding: 8px;
+	border-radius: 25px;
+	background-color: #f3f3f3;
+	.pool-card-tab {
+		color: #717980;
+		width: 50%;
+		border-radius: 25px;
+		font-size: 12px;
+		padding: 10px;
+		font-weight: bold;
+		text-align: center;
+		cursor: pointer;
+		&.active {
+			background-color: #ffffff;
+			color: #2f2f2f;
+		}
+	}
+}
+
+.pool-card-image{
+	width:40px;
+	height:40px;
+	margin-right:  10px;
+}
+.tab-image{
+	height: 25px !important;
+}
+.main-image{
+	height: 35px !important;
+}
+
+.market-table{
+	img{
+		height: auto !important;
+		width: 50px !important;
+	}
 }
