commit after changes

--- a/src/FolowStepsd/FolowSteps.module.sass
+++ b/src/FolowStepsd/FolowSteps.module.sass
@@ -41,8 +41,8 @@
         fill: $neutrals4
         transition: fill .2s
     +dark
-        background: $neutrals3
-        border-color: $neutrals3
+        background: #ff0083
+        border-color: #ff0083
     .loader
         position: absolute
         top: -2px
@@ -51,7 +51,7 @@
         bottom: -2px
         background: $neutrals8
         +dark
-            background: $neutrals1
+            background: #ff0083
 
 .info
     +body-bold-2
@@ -62,7 +62,7 @@
 
 .button
     width: 100%
-
+     color: $neutrals4
 .note
     margin-top: 16px
     +caption-2
