--- a/src/ModalD/Modal.module.sass
+++ b/src/ModalD/Modal.module.sass
@@ -30,7 +30,7 @@
   max-width: 448px
   margin: auto
   padding: 32px
-  background: #ff0083
+  background: $neutrals8
   border-radius: 16px
   z-index: 2
   +dark
@@ -45,7 +45,7 @@
   right: 32px
   width: 40px
   height: 40px
-  background: #ff0083
+  background: $neutrals8
   border: 2px solid $neutrals6
   border-radius: 50%
   font-size: 0
