--- a/src/FolowStepsd/FolowSteps.module.sass
+++ b/src/FolowStepsd/FolowSteps.module.sass
@@ -2,7 +2,8 @@
 
 .title
     margin-bottom: 32px
-
+    border-color: $pink
+      
 .item
     &.error
         .icon
@@ -12,8 +13,8 @@
                 fill: $pink
     &.done
         .icon
-            border-color: $green
-            background: $green url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='10' fill='none' viewBox='0 0 14 10'%3E%3Cpath fill-rule='evenodd' d='M13.707.293a1 1 0 0 1 0 1.414l-8 8a1 1 0 0 1-1.414 0l-4-4a1 1 0 1 1 1.414-1.414L5 7.586 12.293.293a1 1 0 0 1 1.414 0z' fill='%23fcfcfd'/%3E%3C/svg%3E") no-repeat 50% 50% / 14px auto
+            border-color: $pink
+            background: $pink url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='10' fill='none' viewBox='0 0 14 10'%3E%3Cpath fill-rule='evenodd' d='M13.707.293a1 1 0 0 1 0 1.414l-8 8a1 1 0 0 1-1.414 0l-4-4a1 1 0 1 1 1.414-1.414L5 7.586 12.293.293a1 1 0 0 1 1.414 0z' fill='%23fcfcfd'/%3E%3C/svg%3E") no-repeat 50% 50% / 14px auto
             svg
                 display: none
     &:not(:last-child)
@@ -62,7 +63,9 @@
 
 .button
     width: 100%
-     color: $neutrals4
+    color: $pink
+    background: $pink
+
 .note
     margin-top: 16px
     +caption-2
