commit after color change

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -130,19 +130,15 @@ body {
 }
 
 .btn {
-	font-size: 14px;
-	padding: 12px 32px !important;
-	font-weight: 700;
-	// display: flex;
+	color: #fff !important;
+    background: #e91f8b;
+    background: -moz-linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+    background: -webkit-linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+    background: linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e91f8b",endColorstr="#ff8913",GradientType=1);
 }
 .btnD {
-	font-size: 14px;
-	padding: 30px 32px !important;
-	font-weight: 700;
-	color: black;
-	background-color: white;
-	border: 1px solid rgb(255, 0, 131);
-	border-radius: 5px;
+	color: #ea2386;
 }
 
 .theme-nav-items {
