--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -159,8 +159,13 @@ body {
 		}
 
 		&:hover {
-			background-color: rgba(theme-color('site-primary'), 0.08);
-			color: theme-color('site-primary') !important;
+			
+			color: 	 #fff !important;
+			background: #e91f8b;
+			background: -moz-linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+			background: -webkit-linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+			background: linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e91f8b",endColorstr="#ff8913",GradientType=1);
 			span {
 				color: rgba(theme-color('site-nav-link'), 1);
 			}
@@ -175,7 +180,12 @@ body {
 			width: 5px;
 			height: 100%;
 			content: '';
-			background-color: theme-color('site-primary');
+			color: #fff !important;
+    background: #e91f8b;
+    background: -moz-linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+    background: -webkit-linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+    background: linear-gradient(266deg, rgba(233,31,139,1) 0%, rgba(255,137,19,1) 87%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e91f8b",endColorstr="#ff8913",GradientType=1);
 			position: absolute;
 			left: -15px;
 			top: 0;
